src/App.css
/* ... */
h1 {
  font-size: 3rem;
  margin: auto;
}
h2 {
  font-size: 2.5rem;
  margin: auto;
}
h3 {
  font-size: 1.25rem;
}
h4 {
  font-size: 1.25rem;
  font-weight: 400;
}
.centered {
  text-align: center;
}
.lessBold {
  font-size: x-large;
  font-weight: 600;
}
a:link {text-decoration: none; color: black;}
a:visited {text-decoration: none; color: black;}
a:hover {text-decoration: none;}
a:active {text-decoration: none; color: black}


/* Button styling ________________________________________*/
.lgButton {
  display: inline-block;
  background-color: #F4CE14;
  height: 50px;
  width: 250px;
  border-radius: 25px;
  color: #000000;
  font-weight: bold;
  font-size: 1.5rem;
  border: none;
  cursor:pointer;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}
.lgButton:hover {
  background-color: #c4a611;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}
.medButton {
  display: inline-block;
  background-color: #496e57;
  height: 40px;
  width: 180px;
  border-radius: 25px;
  color: #FFFFFF;
  font-weight: bold;
  font-size: 1rem;
  border: none;
  cursor:pointer;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}
.medButton:hover {
  background-color: #314b3b;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}
.lgButton2 {
  display: inline-block;
  background-color: #F4CE14;
  height: 50px;
  width: 300px;
  border-radius: 25px;
  color: #000000;
  font-weight: bold;
  font-size: 1.5rem;
  border: none;
  cursor:pointer;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}
.lgButton2:hover {
  background-color: #c4a611;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}


/* Hero Styling ______________________________________________*/
.previousButton, .nextButton {
  background-color: #F4CE14;
}
.previousButton:hover, .nextButton:hover {
  transform: scale(1.1);
}
.slide {
  padding-top: 6rem;
}
.slide_1, .slide_3 {
  padding: 0 20vw 0 20vw;
  color: #FFFFFF;
  background: linear-gradient(transparent, rgba(0, 0, 0, 1));
}
.slide_2 {
  text-align: center;
  margin: auto;
}
.slide_3 {
  padding-top: 3rem;
}
.slide_1 h3, .slide_3 h3 {
  max-width: 500px;
}
.slide_1 h2 {
  font-size: 2rem;
}
.slide h3 {
  padding: 2rem 0 2rem 0;
}
.slider {
  height: 60vh !important;
}
.slide.hidden {
	visibility: hidden;
  z-index: -500;
}
@media(max-width: 1250px) {
  .two[style] {
    background-position: 45% 70% !important;
  }
  .slide {
    padding-top: 20vhrem;
  }
  .slide_2 {
    padding-top: 2rem;
  }
}
@media(max-width: 700px) {
  .slide_2 h1, .slide_2 h3 {
    max-width: 350px;
    margin: auto;
  }
  .slide {
    padding-top: 5vh;
  }
  .slide_1 {
    text-align: center;
  }
  .slide_1 h3 {
    display: none;
  }
  .slide_1 h2 {
    padding-bottom: 4rem;
  }
  .previousButton, .nextButton {
    position: relative;
    width: 30px !important;
    height: 30px !important;
  }
  .nextButton svg {
    width: 20px !important;
    height: 20px !important;
    padding-bottom: 3px;
    padding-right: 10px;
  }
  .previousButton svg {
    width: 20px !important;
    height: 20px !important;
    padding-bottom: 3px;
    padding-right: 10px;
  }
}


/* Main Navingation Styling _____________________________________*/
.navbar {
  display: flex;
  background-color: rgb(255, 255, 255);
  box-shadow: 0 0 4px gray;
  height: 5rem;
  width: 100%;
  position: sticky;
  z-index: 5;
  top: 0px;
  padding: 0 12.5vw 0 12.5vw;
  transition: 0.5s;
  transition-timing-function: ease-in-out;
}
.navlink {
  text-transform: uppercase;
  color: #000000;
  position: relative;
  white-space: nowrap;
  padding: 0 2.5vw 0 2.5vw;
  transition: 0.2s;
}
.navitem {
  margin: auto;
  transition: 0.2s;
}
.navitem:hover {
  transform: scale(1.2);
  transition: 0.2s;
}
.navlink:hover {
  color: #496e57;
  transition: 0.2s;
}
.menu {
  display: flex;
  list-style: none;
  margin: auto 0 auto auto;
  padding-right: 2.5vw;
}
.Logo {
  margin: auto auto auto 0;
  padding-right: 5vw;
}
.login {
  display: inline;
  padding-left: 5vw;
  margin: auto;
}
#user {
  padding-right: 20px;
}
@media(max-width:1100px) {
  .logo {
    padding-right: 1vw;
  }
  .navlink {
    padding-right: 1vw;
  }
  .login {
    padding-left: 3vw;
  }
}

/* Mobile Navigation Styling ___________________________________*/
.bar {
  display: block;
  width: 25px;
  height: 2px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.5s ease-in-out;
  background-color: black;
}
.overlay {
  visibility: hidden;
  position: fixed;
  width: 100%;
  height: 100vh;
  top: 0;
  left: 0;
  background-color: black;
  z-index: 0;
  opacity: 0;
  transition: 0.3s ease-in;
}
.hamburger {
  display: inline-block;
  margin: auto 0 auto auto;
  cursor: pointer;
  z-index: 6;
}
.mLogo {
  padding-left: 2rem;
  margin: auto 0 auto auto;
}
.hamburger.active .bar:nth-child(2) {
  opacity: 0;
}
.hamburger.active .bar:nth-child(1) {
  transform: translateY(7px) rotate(45deg);
  background-color: #F4CE14;
}
.hamburger.active .bar:nth-child(3) {
  transform: translateY(-7px) rotate(-45deg);
  background-color: #F4CE14;
}
.mMenu {
  position: fixed;
  top: 0%;
  right: 0%;
  opacity: 0;
  flex-direction: column;
  background-color: #496e57;
  width: 0px;
  height: 100vh;
  padding-top: 6rem;
  overflow: hidden;
  z-index: 2;
  transition: all 0.5s ease;
  border-radius: 25px 0 0 0;
  box-shadow: -5px 0 15px rgba(0, 0, 0, 0.3);
}
.mNavlink {
  text-transform: uppercase;
  color: #ffffff;
  position: relative;
  white-space: nowrap;
  padding-right: 5vw;
  margin-left: auto;
  font-weight: bold;
}
.mNavlink:hover {
  color: #F4CE14;
  transition: 0.3s;
}
.mNavitem {
  margin: 2vh 0 4vh 0;
  list-style: none;
}
.mLogin {
  border-top: #314b3b 1px solid;
  padding-top: 3rem;
}
.mMenu.active {
  padding: 6rem 8vw 0;
  opacity: 1;
  width: 35%;
  transition: all 0.8s ease;
}
.overlay.active {
  visibility: visible;
  opacity: 0.7;
  transition: all 0.5s ease-in-out;
}
/* ... */

